
[workspace]

members = ["ftmemsim"]


[workspace.dependencies]

anyhow = "1.0.71"
average = "0.13.1"
byteorder = "1.4.3"
clap = { version = "4.2.7", features = ["derive"] }
extend = "1.2.0"
itertools = "0.10.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Workspace members
ftmemsim = { path = "ftmemsim" }
