
[workspace]

resolver = "2"
members = ["ftmemsim", "ftmemsim-util", "ftmemsim-graphs"]


[workspace.dependencies]

anyhow = "1.0.71"
average = "0.13.1"
byteorder = "1.4.3"
clap = { version = "4.2.7", features = ["derive"] }
extend = "1.2.0"
itertools = "0.10.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
bincode = "2.0.0-rc.3"
gzp = "0.11.3"
gnuplot = "0.0.38"
palette = "0.7.2"

# Workspace members
ftmemsim = { path = "ftmemsim" }
ftmemsim-util = { path = "ftmemsim-util" }
ftmemsim-graphs = { path = "ftmemsim-graphs" }
