
[workspace]

resolver = "2"
members = [
	"ftmemsim",
	"ftmemsim-util",
	"ftmemsim-graphs",
	"util/parse-valgrind",
	"examples/simple-rw",
	"examples/random-rw",
]

[workspace.dependencies]

anyhow = "1.0.75"
average = "0.13.1"
byteorder = "1.5.0"
clap = { version = "4.4.7", features = ["derive"] }
extend = "1.2.0"
itertools = "0.10.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
bincode = "2.0.0-rc.3"
gzp = "0.11.3"
gnuplot = "0.0.38"
palette = "0.7.3"
rand = "0.8.5"

# Workspace members
ftmemsim = { path = "ftmemsim" }
ftmemsim-util = { path = "ftmemsim-util" }
ftmemsim-graphs = { path = "ftmemsim-graphs" }
