[package]
name = "ftmemsim-graphs"
version = "0.1.0"
edition = "2021"

[dependencies]

clap = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
gnuplot = { workspace = true }
average = { workspace = true }
ftmemsim = { workspace = true }
ftmemsim-util = { workspace = true }
