[package]
name = "ftmemsim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
average = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
extend = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
