[package]
name = "ftmemsim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
average = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
extend = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
gzp = { workspace = true }
ftmemsim-util = { workspace = true }
